--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://lkarlashane.github.io/simple-minesweeper",
   "name": "simple-minesweeper",
   "private": true,
   "version": "0.0.0",
